<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:id="@+id/create"
    tools:context=".CreateAccountActivity">

    <!-- Top panel -->
    <View
        android:id="@+id/topPanelGraphic"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="0dp"
        android:background="#6750a5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Create Account section label -->
    <TextView
        android:id="@+id/createAccountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Create Account"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#333333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectAppLabel" />

    <!-- Username field -->
    <EditText
        android:id="@+id/editUsername"
        android:layout_width="272dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType = "text|textNoSuggestions"
        android:hint="Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountLabel" />

    <!-- Password field -->
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="272dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <!--  Customize Theme Label  -->
    <TextView
        android:id="@+id/customizeThemeLabel"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:paddingStart="3dp"
        android:paddingLeft="4dp"
        android:text="Customize Theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <!--  Theme: Text field for theme customization  -->
    <EditText
        android:id="@+id/theme"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="14dp"
        android:hint="Describe your theme: 'summer beach', 'cyberpunk nightscape', or hex color"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customizeThemeLabel" />

    <!-- Title -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Team 316"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#EDE8E8"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/topPanelGraphic"
        app:layout_constraintEnd_toEndOf="@id/topPanelGraphic"
        app:layout_constraintStart_toStartOf="@id/topPanelGraphic"
        app:layout_constraintTop_toTopOf="@id/topPanelGraphic" />

    <!-- CS427 Project App label  -->
    <TextView
        android:id="@+id/projectAppLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="CS427 Project App"
        android:textSize="18sp"
        android:textColor="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanelGraphic" />

    <!--  Create account button  -->
    <Button
        android:id="@+id/CreateAccountButton"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="Create Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme" />

    <!--  Text to go back to Login Page  -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Already have an account? Login here"
        android:textColor="#6750a5"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CreateAccountButton" />

</androidx.constraintlayout.widget.ConstraintLayout>