...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title-->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team 316"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#EDE8E8"
        android:textSize="28sp"
...
